feat(onboarding): 승인 시 역할 할당·대시보드 완전성 및 Nginx SPA 캐시
- 온보딩 생성: checklistJson 병합 실패·adminPassword 누락 시 400
- 승인: 연락 이메일 있을 때 비밀번호 해시 필수, finalStatus로 REJECTED 유지
- OnboardingApproval: 관리자 생성 후 원장(DIRECTOR) user_role_assignments, 프로시저 성공 후에도 대시보드·역할 보강
- TenantDashboard: 역할 템플릿 수와 대시보드 수 불일치 시 IllegalStateException
- 단위/통합 테스트 보강 (OnboardingApprovalDirectorRoleAssignmentTest 등)
- nginx: /static immutable, HTML·SPA 셸 no-cache (prod·dev)

Made-with: Cursor